language improves and optimizing the code